Removing image from post

--- a/_notebooks/2021-09-04-FeatureEngTensorflow.ipynb
+++ b/_notebooks/2021-09-04-FeatureEngTensorflow.ipynb
@@ -9,8 +9,7 @@
         "- toc: true \n",
         "- badges: true\n",
         "- comments: true\n",
-        "- categories: [jupyter, tensorflow]\n",
-        "- image: images/chart-preview.png\n"
+        "- categories: [jupyter, tensorflow]\n"
       ],
       "metadata": {
         "id": "TZ-PuwoyX4qQ"
