--- a/_notebooks/2021-09-05-KerasTuner.ipynb
+++ b/_notebooks/2021-09-05-KerasTuner.ipynb
@@ -79,6 +79,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Euly5kZ8pa2M"
+      },
+      "source": [
+        "# Loading the dataset"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "j1CH9fc6bFzS"
@@ -89,6 +98,29 @@
         "for dirname, _, filenames in os.walk('./input'):\n",
         "    for filename in filenames:\n",
         "        print(os.path.join(dirname, filename))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3LLAa1jNph9l"
+      },
+      "source": [
+        "if not os.path.isdir(\"/tmp/data\"):\n",
+        "    os.makedirs(\"/tmp/data\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nmbVoA2NpjaN"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
@@ -107,7 +139,7 @@
         "#X_test_full = pd.read_csv('../input/tabular-playground-series-aug-2021/test.csv', index_col='id')\n",
         "\n",
         "Xx = pd.read_csv('./input/train.csv', index_col='id')\n",
-        "X_test = pd.read_csv('./input/test.csv', index_col='id')"
+        "#X_test = pd.read_csv('./input/test.csv', index_col='id')"
       ],
       "execution_count": null,
       "outputs": []
@@ -121,8 +153,8 @@
         "# Remove rows with missing target, separate target from predictors\n",
         "X = Xx.copy(deep=True)\n",
         "X.dropna(axis=0, subset=['loss'], inplace=True)\n",
-        "Y = X.loss              \n",
-        "X.drop(['loss'], axis=1, inplace=True)"
+        "#Y = X.loss              \n",
+        "#X.drop(['loss'], axis=1, inplace=True)"
       ],
       "execution_count": null,
       "outputs": []
@@ -148,8 +180,19 @@
         "from sklearn.preprocessing import StandardScaler\n",
         "scaler = StandardScaler()\n",
         "X_scaled = scaler.fit_transform(X)\n",
-        "X_test_index = X_test.index\n",
-        "X_test_scaled = scaler.transform(X_test)"
+        "#X_test_index = X_test.index\n",
+        "#X_test_scaled = scaler.transform(X_test)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "w_3J1MMJwcbT"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
@@ -160,7 +203,8 @@
         "id": "8eTtrgjKfYv6"
       },
       "source": [
-        "X_train, X_valid, Y_train, Y_valid = train_test_split(X_scaled, Y, train_size=0.8, test_size = 0.2,stratify=Y, random_state = 123)"
+        "#X_train, X_valid, Y_train, Y_valid = train_test_split(X_scaled, Y, train_size=0.8, test_size = 0.2,stratify=Y, random_state = 123)\n",
+        "train, valid = train_test_split(X, test_size=0.2, random_state = 123)\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -171,11 +215,101 @@
         "id": "KfeRFoiqeRX8"
       },
       "source": [
-        "print(X_train.shape)\n",
-        "print(Y_train.shape)\n",
-        "print(X_valid.shape)\n",
-        "print(Y_valid.shape)\n",
-        "print(X_test.shape)"
+        "print(train.shape)\n",
+        "print(valid.shape)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZOAFRcO-r073"
+      },
+      "source": [
+        "pd.DataFrame(train).to_csv(\"/tmp/data/tabular-train.csv\", index=False)\n",
+        "pd.DataFrame(valid).to_csv(\"/tmp/data/tabular-valid.csv\", index=False)\n",
+        "#pd.DataFrame(X_test_scaled).to_csv(\"/tmp/data/tabular-test.csv\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yr3zgA4wsRha"
+      },
+      "source": [
+        "!ls -l /tmp/data/*.csv"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EuRfw9FMvRBe"
+      },
+      "source": [
+        "pd.read_csv('/tmp/data/tabular-train.csv').columns"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "O68S_PQcxN1T"
+      },
+      "source": [
+        "pd.read_csv('/tmp/data/tabular-valid.csv').pop('loss').columns"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4v2ran10saD6"
+      },
+      "source": [
+        "# Create input pipeline"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YuN8gYGZseXX"
+      },
+      "source": [
+        "# Specify which column is the target\n",
+        "LABEL_COLUMN = 'loss'\n",
+        "\n",
+        "# Specify numerical columns\n",
+        "# Note you should create another list with STRING_COLS if you \n",
+        "# had text data but in this case all features are numerical\n",
+        "NUMERIC_COLS = ['f0', 'f1',\n",
+        "                'f2', 'f3',\n",
+        "                'f4', 'f5', 'f6']\n",
+        "\n",
+        "\n",
+        "# A function to separate features and labels\n",
+        "def features_and_labels(row_data):\n",
+        "    label = row_data.pop(LABEL_COLUMN)\n",
+        "    return row_data, label\n",
+        "\n",
+        "\n",
+        "# A utility method to create a tf.data dataset from a CSV file\n",
+        "def load_dataset(pattern, batch_size=1, mode='eval'):\n",
+        "    dataset = tf.data.experimental.make_csv_dataset(pattern, batch_size)\n",
+        "    \n",
+        "    dataset = dataset.map(features_and_labels)  # features, label\n",
+        "    if mode == 'train':\n",
+        "        # Notice the repeat method is used so this dataset will loop infinitely\n",
+        "        dataset = dataset.shuffle(1000).repeat()\n",
+        "        # take advantage of multi-threading; 1=AUTOTUNE\n",
+        "        dataset = dataset.prefetch(1)\n",
+        "    return dataset"
       ],
       "execution_count": null,
       "outputs": []
@@ -192,6 +326,129 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "iVzvY2kXtgxH"
+      },
+      "source": [
+        "def build_dnn_model():\n",
+        "    # input layer\n",
+        "    inputs = {\n",
+        "        colname: layers.Input(name=colname, shape=(), dtype='float32')\n",
+        "        for colname in NUMERIC_COLS\n",
+        "    }\n",
+        "\n",
+        "    # feature_columns\n",
+        "    feature_columns = {\n",
+        "        colname: fc.numeric_column(colname)\n",
+        "        for colname in NUMERIC_COLS\n",
+        "    }\n",
+        "\n",
+        "    # Constructor for DenseFeatures takes a list of numeric columns\n",
+        "    # and the resulting tensor takes a dictionary of Input layers\n",
+        "    dnn_inputs = layers.DenseFeatures(feature_columns.values())(inputs)\n",
+        "\n",
+        "    # two hidden layers of 32 and 8 units, respectively\n",
+        "    h1 = layers.Dense(32, activation='relu', name='h1')(dnn_inputs)\n",
+        "    h2 = layers.Dense(8, activation='relu', name='h2')(h1)\n",
+        "\n",
+        "    # final output is a linear activation because this is a regression problem\n",
+        "    output = layers.Dense(1, activation='linear', name='fare')(h2)\n",
+        "\n",
+        "    # Create model with inputs and output\n",
+        "    model = models.Model(inputs, output)\n",
+        "\n",
+        "    # compile model (Mean Squared Error is suitable for regression)\n",
+        "    model.compile(optimizer='adam', \n",
+        "                  loss='mse', \n",
+        "                  metrics=[\n",
+        "                      tf.keras.metrics.RootMeanSquaredError(name='rmse'), \n",
+        "                      'mse'\n",
+        "                  ])\n",
+        "\n",
+        "    return model"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "alg2zaRFtmgM"
+      },
+      "source": [
+        "# Save compiled model into a variable\n",
+        "model = build_dnn_model()\n",
+        "\n",
+        "# Plot the layer architecture and relationship between input features\n",
+        "#tf.keras.utils.plot_model(model, 'dnn_model.png', show_shapes=False, rankdir='LR')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xDn3wBPXtrJw"
+      },
+      "source": [
+        "# Training the model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lELyg8VStqjE"
+      },
+      "source": [
+        "NUM_EPOCHS = 20\n",
+        "TRAIN_BATCH_SIZE = 32 \n",
+        "NUM_TRAIN_EXAMPLES = len(pd.read_csv('/tmp/data/tabular-train.csv'))\n",
+        "NUM_EVAL_EXAMPLES = len(pd.read_csv('/tmp/data/tabular-valid.csv'))\n",
+        "\n",
+        "print(f\"training split has {NUM_TRAIN_EXAMPLES} examples\\n\")\n",
+        "print(f\"evaluation split has {NUM_EVAL_EXAMPLES} examples\\n\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LmjVmn6KtzUs"
+      },
+      "source": [
+        "# Training dataset\n",
+        "trainds = load_dataset('/tmp/data/tabular-train*', TRAIN_BATCH_SIZE, 'train')\n",
+        "\n",
+        "# Evaluation dataset\n",
+        "evalds = load_dataset('/tmp/data/tabular-valid*', 1000, 'eval').take(NUM_EVAL_EXAMPLES//1000)\n",
+        "\n",
+        "# Needs to be specified since the dataset is infinite \n",
+        "# This happens because the repeat method was used when creating the dataset\n",
+        "steps_per_epoch = NUM_TRAIN_EXAMPLES // TRAIN_BATCH_SIZE\n",
+        "\n",
+        "# Train the model and save the history\n",
+        "history = model.fit(trainds,\n",
+        "                    validation_data=evalds,\n",
+        "                    epochs=NUM_EPOCHS\n",
+        "                    ,steps_per_epoch=steps_per_epoch)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IdYN2zfTyt6p"
+      },
+      "source": [
+        "print(type(trainds))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "RI8d0pdoboEj"
       },
       "source": [
@@ -202,6 +459,17 @@
         "    if(logs.get('mean_absolute_error') < DESIRED_MAE):\n",
         "      print(\"\\nReached {}% MAE so cancelling training!\".format(DESIRED_MAE))\n",
         "      self.model.stop_training = True "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ksxSrowDtl-G"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
