Adding notebook on dimensionality reduction

--- a/_notebooks/2021-09-16-NMF.ipynb
+++ b/_notebooks/2021-09-16-NMF.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 1,
    "source": [
     "# General use imports\n",
     "import numpy as np\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 2,
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.decomposition import NMF\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 3,
    "source": [
     "# Define function for plotting top 20 words for each topic\n",
     "def plot_words_for_topics(n_comp, nmf, feature_names):\n",
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "source": [
     "# Test using 20newsgroups dataset from https://scikit-learn.org/stable/datasets/real_world.html#the-20-newsgroups-text-dataset\n",
     "# Download data\n",
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "source": [
     "# Printing the data in a list format.\n",
     "print(f\"Data has {len(data)} elements.\\n\")\n",
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 6,
    "source": [
     "def get_vector(data):\n",
     "    # Convert a collection of raw documents to a matrix of TF-IDF features.\n",
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 7,
    "source": [
     "#Function that  \n",
     "def try_NMF(n_comp, data):\n",
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 8,
    "source": [
     "# Try NMF for 5 topics\n",
     "try_NMF(5, data)"
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 9,
    "source": [
     "# Get from csv to dictionary\n",
     "dict_csv = pd.read_csv('/Users/castrma/Projects/DT/svt-data-processing/others/csv/notification_long_text.csv', \n",
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 10,
    "source": [
     "#create a list of non-conformance\n",
     "internal_data = dict_csv.values()\n",
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 11,
    "source": [
     "print(f\"Data has {len(internal_data)} elements.\\n\")\n",
     "print(f\"First element: \\n\")\n",
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 12,
    "source": [
     "try_NMF(5, internal_data)"
    ],
@@ -458,78 +458,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 13,
    "source": [
     "#print(f\"Original text:\\n{data[0]}\\n\")\n",
     "#print(next(iter(data)))\n",
     "\n",
     "#print(f\"Representation based on topics:\\n{vect_data_internal[0]}\")"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Representation based on topics:\n",
-      "  (0, 153)\t0.04973787084337301\n",
-      "  (0, 5)\t0.059289525058434954\n",
-      "  (0, 110)\t0.04809683310696816\n",
-      "  (0, 423)\t0.052225452286301544\n",
-      "  (0, 409)\t0.05283281862277425\n",
-      "  (0, 453)\t0.05088288253691166\n",
-      "  (0, 279)\t0.049763770200816064\n",
-      "  (0, 223)\t0.0518883220529565\n",
-      "  (0, 243)\t0.049195508733263324\n",
-      "  (0, 77)\t0.03916316786200181\n",
-      "  (0, 496)\t0.05443417103452969\n",
-      "  (0, 354)\t0.04707924066652441\n",
-      "  (0, 253)\t0.04910025838231355\n",
-      "  (0, 427)\t0.04753088773577895\n",
-      "  (0, 469)\t0.04810794506353835\n",
-      "  (0, 405)\t0.05184187069868106\n",
-      "  (0, 318)\t0.052578940958273444\n",
-      "  (0, 252)\t0.05369660811334741\n",
-      "  (0, 350)\t0.052427923617835014\n",
-      "  (0, 68)\t0.05001904713095685\n",
-      "  (0, 344)\t0.0524571415757526\n",
-      "  (0, 126)\t0.07407943802377062\n",
-      "  (0, 417)\t0.05644296731342835\n",
-      "  (0, 313)\t0.06987118296819159\n",
-      "  (0, 100)\t0.1451933101390747\n",
-      "  :\t:\n",
-      "  (0, 359)\t0.06370074404479234\n",
-      "  (0, 247)\t0.05697363329468701\n",
-      "  (0, 349)\t0.04542282645636342\n",
-      "  (0, 124)\t0.1533263532340366\n",
-      "  (0, 276)\t0.21918082885255508\n",
-      "  (0, 292)\t0.11472227671346329\n",
-      "  (0, 397)\t0.0675999440079889\n",
-      "  (0, 192)\t0.09797138161877676\n",
-      "  (0, 425)\t0.03931185814925424\n",
-      "  (0, 221)\t0.0521855960251651\n",
-      "  (0, 35)\t0.2958819701245315\n",
-      "  (0, 7)\t0.2445569990270664\n",
-      "  (0, 4)\t0.17450808684194383\n",
-      "  (0, 130)\t0.11577341848183867\n",
-      "  (0, 366)\t0.04797325573823823\n",
-      "  (0, 0)\t0.053248418970213034\n",
-      "  (0, 237)\t0.14181535496494246\n",
-      "  (0, 141)\t0.04796597211561843\n",
-      "  (0, 439)\t0.17931837729602612\n",
-      "  (0, 81)\t0.05009602208367273\n",
-      "  (0, 312)\t0.10567358864560548\n",
-      "  (0, 361)\t0.09609603268421363\n",
-      "  (0, 61)\t0.10435307354630534\n",
-      "  (0, 249)\t0.3426722908248088\n",
-      "  (0, 302)\t0.32209735482981244\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 18,
    "source": [
     "#Function that  \n",
     "def NMFv2(n_comp, data):\n",
@@ -541,7 +482,7 @@
     "  output:\n",
     "  plot words for topics\n",
     "  '''\n",
-    " vectorizer, vect_data = get_vector(data)\n",
+    "  vectorizer, vect_data = get_vector(data)\n",
     "  #beta_loss: beta divergence to be minimized\n",
     "  #solver: numerical solver to use. mu = Multiplicative Update solver\n",
     "  #max_iter: maximum number of iterations before timing out.\n",
@@ -549,7 +490,7 @@
     "  #l1_ratio: the regularization mixing parameter\n",
     "  nmf = NMF(n_components=n_comp, random_state=42,\n",
     "        beta_loss='kullback-leibler', solver='mu', max_iter=1000, alpha=.1,\n",
-    "        l1_ratio=.5)\n",
+    "      l1_ratio=.5)\n",
     "  # Lets learn a NMF model for the vect_data\n",
     "  nmf.fit(vect_data)\n",
     "  feature_names = vectorizer.get_feature_names()\n",
@@ -560,11 +501,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "source": [
-    "NMF_v2(5, internal_data)"
+    "NMFv2(5, internal_data)"
    ],
    "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Data has shape (386102, 500) after vectorization.\n",
+      "Each data point has shape (1, 500) after vectorization.\n"
+     ]
+    },
     {
      "output_type": "stream",
      "name": "stderr",
