--- a/_notebooks/2021-09-16-NMF.ipynb
+++ b/_notebooks/2021-09-16-NMF.ipynb
@@ -330,13 +330,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "source": [
     "print(f\"Data has {len(internal_data)} elements.\\n\")\n",
     "print(f\"First element: \\n\")\n",
-    "for n, d in enumerate(internal_data[:1], start=1):\n",
-    "  print(\"======\"*10)\n",
-    "  print(f\"Element number {n}:\\n\\n{d}\\n\")"
+    "#for n, d in enumerate(internal_data[:1], start=1):\n",
+    "#  print(\"======\"*10)\n",
+    "#  print(f\"Element number {n}:\\n\\n{d}\\n\")"
    ],
    "outputs": [
     {
@@ -346,72 +346,6 @@
       "Data has 386102 elements.\n",
       "\n",
       "First element: \n",
-      "\n",
-      "============================================================\n",
-      "Element number 1:\n",
-      "\n",
-      "################################################################\n",
-      "          PERFORMED MAINTENANCE ACTIVITY REPORT (PMAR)\n",
-      "       Based on TechnipFMC document LIST-0000027333 Rev C\n",
-      "################################################################\n",
-      "  Report date: 02.05.2019\n",
-      "  Issued by  : KOLLTVT\n",
-      "################################################################\n",
-      "1. STATUS AFTER MAINTENANCE\n",
-      "  GREEN\n",
-      "################################################################\n",
-      "2. TechnipFMC SERVICE ORDER NUMBER\n",
-      "  Service order no.   : 1645524\n",
-      "  Customers Reference : M3: Replace\n",
-      "  PONC NOI for SRC of TSEP -VO002-01\n",
-      "  Customers Work Order: SUP-389\n",
-      "  Customers PO number : 4503330444\n",
-      "################################################################\n",
-      "3. TechnipFMC EQUIPMENT DATA\n",
-      "  Description....: CAP WING HUB, INBOARD, HP METAL, REINSTA\n",
-      "  Equipment no...: 17128020\n",
-      "  Part Number....: P6000145531\n",
-      "  Serial Number..: 4500166658-002\n",
-      "  Project........: Add-On Products SUP Statoil\n",
-      "  Customer EQ no.: #N/A\n",
-      "################################################################\n",
-      "4. MAINTENANCE LOCATION\n",
-      "  ONSHORE Workshop:bygg 7\n",
-      "################################################################\n",
-      "5. MAINTENANCE PROGRAM / ACTIVITY PERFORMED\n",
-      "  INCOMING GOODS INSPECTION  - OLD EQUIPPMARNT\n",
-      "  Check of equipment maintenance history (Optional):\n",
-      "  - Last previous maintenance type :  N/A\n",
-      "  - Date for last previous maintenance performed  :  N/A\n",
-      "  - Number of runs since previous overhaul/strip down :  N/A\n",
-      "################################################################\n",
-      "6. DESCRIPTION OF WORK / OPERATIONS PERFORMED\n",
-      "  Tag, p/n, s/n and other markings are readable\n",
-      "  Maintenance work in accordance with procedure(s):\n",
-      "  - task list\n",
-      "  REMARKS:\n",
-      "----------------------------------------------------------------\n",
-      "performed rep.according to task list\n",
-      "checked that pn and sn is in accordance to so\n",
-      "performed spot paint fo anode bracket\n",
-      "inspeckted for damage\n",
-      "----------------------------------------------------------------\n",
-      "################################################################\n",
-      "7. RECERTIFICATION PERFORMED ACCORDING APPLICABLE REGULATIONS\n",
-      "  *NONE* - (All marked with N/A.)\n",
-      "################################################################\n",
-      "8. PREPARATIONS FOR SHIPMENT / FURTHER USE / STORAGE\n",
-      "  Old marking has been removed\n",
-      "  Green tag has been written and attached to the equipment\n",
-      "  Equipment has been checked for loose items / objects / tools\n",
-      "################################################################\n",
-      "9. SIGNATURES AND DATE\n",
-      "  Work started on 02.05.2019, and completed on 02.05.2019\n",
-      "  Work performed by : KOLLTVT\n",
-      "  Work checked by   : KOSKRS                    on : 03.05.2019\n",
-      "################################################################\n",
-      "                           (PMAR END)\n",
-      "################################################################\n",
       "\n"
      ]
     }
@@ -420,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "source": [
     "try_NMF(5, internal_data)"
    ],
@@ -431,14 +365,6 @@
      "text": [
       "Data has shape (386102, 500) after vectorization.\n",
       "Each data point has shape (1, 500) after vectorization.\n"
-     ]
-    },
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "/Users/castrma/miniconda3/envs/tensorflow_py37/lib/python3.7/site-packages/sklearn/decomposition/_nmf.py:315: FutureWarning: The 'init' value, when 'init=None' and n_components is less than n_samples and n_features, will be changed from 'nndsvd' to 'nndsvda' in 1.1 (renaming of 0.26).\n",
-      "  \"'nndsvda' in 1.1 (renaming of 0.26).\"), FutureWarning)\n"
      ]
     },
     {
