Playing with oil and gas corpus from  Language Technology Group at the University of Oslo

--- a/_notebooks/2022-01-04-NLPDeepLearning.ipynb
+++ b/_notebooks/2022-01-04-NLPDeepLearning.ipynb
@@ -4,13 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Notes on Natural Langage Processing with Deep Learning\n",
-    "> A notebook that reproduces some of the teaching content from Stanford CS224n: Natural Language Processing with Deep Learning\n",
-    "\n",
-    "- toc: true \n",
-    "- badges: true\n",
-    "- comments: true\n",
-    "- categories: [NLP, word2vector]"
+    "# Notes on Natural Langage Processing with Deep Learning\n"
    ]
   },
   {
@@ -19,6 +13,20 @@
    "source": [
     "# Word to Vector for Oil and Gas"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
