Playing with oil and gas corpus from  Language Technology Group at the University of Oslo

--- a/_notebooks/2022-01-04-NLPDeepLearning.ipynb
+++ b/_notebooks/2022-01-04-NLPDeepLearning.ipynb
@@ -17,13 +17,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Word to Vector\n",
+    "# Part 1: Word Vectors\n",
     "[CS224n: Natural Language Processing with Deep Learning](https://web.stanford.edu/class/cs224n/).\n",
     "\n",
-    "# Oil and Gas Corpus dataset\n",
+    "In this section I try to use the knowledge of the [word vector knowledge](https://web.stanford.edu/class/archive/cs/cs224n/cs224n.1214/slides/cs224n-2021-lecture01-wordvecs1.pdf) but using a different corpus - oil and gas corpus from the Language Technology Group at the University of Oslo.\n",
+    "\n",
+    "#### Oil and Gas Corpus dataset\n",
     "\n",
     "source: http://vectors.nlpl.eu/repository/\n",
     "ID: 75 \n",
+    "```yaml \n",
     "\"creators\": [\n",
     "        {\n",
     "            \"email\": \"farhadno@ifi.uio.no\",\n",
@@ -36,14 +39,14 @@
     "\"iterations\": 5,\n",
     "\"vocabulary size\": 285055,\n",
     "\"window\": 5\n",
-    "\n"
+    "```\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Word to Vector for Oil and Gas"
+    "## Word Vectors for Oil and Gas"
    ]
   },
   {
